--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Imports: Rcpp,
     RcppParallel (>= 5.1.10),
     data.table,
     dplyr,
-    Matrix
+    Matrix,
+    rlang
 Depends: 
     R (>= 3.5)
 LazyData: true
