--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,11 @@ importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,setDT)
 importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,count)
 importFrom(dplyr,desc)
+importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
@@ -25,6 +27,9 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(fastkmedoids,fastpam)
+importFrom(rlang,as_name)
+importFrom(rlang,enquo)
 importFrom(stats,as.dist)
+importFrom(stats,median)
 importFrom(utils,combn)
 useDynLib(MSCA, .registration = TRUE)
