verssion 1.3.0 which is ok to be commited to main before modifying fast_clara_jaccard to work with colnames instead of indexes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(fastkmedoids,fastclarans)
 importFrom(fastkmedoids,fastpam)
 importFrom(rlang,as_name)
 importFrom(rlang,enquo)
